--- a/newtheme.css
+++ b/newtheme.css
@@ -1,4 +1,4 @@
-/* Yourtheme extension, https://github.com/datenstrom/yellow-example-theme */
+/* Newtheme extension, https://github.com/datenstrom/yellow-newtheme */
 
 /* Colors and fonts */
 
