--- a/newtheme.css
+++ b/newtheme.css
@@ -4,10 +4,17 @@
 
 :root {
     --bg: #fff;
+    --notice1-bg: #fffbf0;
+    --notice2-bg: #fdf0f0;
+    --notice3-bg: #f0f8fe;
     --heading: #111;
-    --text: #666;
+    --text: #333;
     --link: #07d;
-    --link-active: #29f;
+    --link-active: #07d;
+    --blockquote-accent: #ddd;
+    --border: #bbb;
+    --font: -apple-system, Roboto, Helvetica, sans-serif;
+    --monospace-font: Consolas, Menlo, Courier, monospace;
 }
 
 /* General */
@@ -22,13 +29,14 @@ body {
     margin: 1em;
     background-color: var(--bg);
     color: var(--text);
+    font-family: var(--font);
     font-size: 1em;
     font-weight: 300;
     line-height: 1.5;
 }
 h1, h2, h3, h4, h5, h6 {
     color: var(--heading);
-    font-weight: 400;
+    font-weight: 600;
 }
 a {
     color: var(--link);
@@ -58,30 +66,70 @@ a:hover {
 .content form {
     margin: 1em 0;
 }
+.content code,
+.content pre {
+    font-family: var(--monospace-font);
+    font-size: 90%;
+    font-weight: 600;
+}
+.content blockquote {
+    margin: 1em 0;
+    padding: 10px 1em;
+    border: 1px solid var(--blockquote-accent);
+    border-radius: 3px;
+}
+.content .notice1 {
+    margin: 1em 0;
+    padding: 10px 1em;
+    background-color: var(--notice1-bg);
+    border-radius: 3px;
+}
+.content .notice2 {
+    margin: 1em 0;
+    padding: 10px 1em;
+    background-color: var(--notice2-bg);
+    border-radius: 3px;
+}
+.content .notice3,
+.content .notice4,
+.content .notice5,
+.content .notice6 {
+    margin: 1em 0;
+    padding: 10px 1em;
+    background-color: var(--notice3-bg);
+    border-radius: 3px;
+}
+.content .left {
+    float: left;
+    margin: 0 1em 0 0;
+}
+.content .center {
+    display: block;
+    margin: 0 auto;
+}
+.content .right {
+    float: right;
+    margin: 0 0 0 1em;
+}
+.content .rounded {
+    border-radius: 4px;
+}
 
 /* Header */
 
 .header {
-    margin: 2em 0;
-}
-.header .sitename {
-    display: block;
-    float: left;
+    margin: 1em 0;
 }
 .header .sitename h1 {
     margin: 0;
-    font-size: 1em;
-    font-weight: 300;
+    font-size: 3em;
+    font-weight: 700;
 }
 .header .sitename h1 a {
-    color: var(--text);
+    color: var(--heading);
     border-bottom: solid 3px var(--bg);
     text-decoration: none;
     padding: 0.5em 0;
-}
-.header .sitename h1 a:hover {
-    color: var(--link);
-    border-bottom: solid 3px var(--link-active);
 }
 .header .sitename p {
     margin-top: 0;
@@ -90,20 +138,14 @@ a:hover {
 
 /* Navigation */
 
-.navigation {
-    display: block;
-    float: right;
-}
 .navigation a {
-    color: var(--text);
-    border-bottom: solid 3px var(--bg);
+    color: var(--link);
     text-decoration: none;
-    padding: 0.5em 0;
     margin: 0 0.5em;
 }
 .navigation a:hover {
     color: var(--link);
-    border-bottom: solid 3px var(--link-active);
+    text-decoration: underline;
 }
 .navigation ul {
     margin: 0 -0.5em;
@@ -114,8 +156,59 @@ a:hover {
     display: inline;
 }
 .navigation li a.active {
-    border-bottom: solid 3px var(--link-active);
+    color: var(--link-active);
+}
+.navigation li a.active:hover {
+    color: var(--link-active);
 }
 .navigation-banner {
     clear: both;
+}
+
+/* Forms and buttons */
+
+.form-control {
+    margin: 0;
+    padding: 2px 4px;
+    display: inline-block;
+    min-width: 7em;
+    background-color: var(--bg);
+    color: var(--text);
+    background-image: linear-gradient(to bottom, var(--bg), var(--bg));
+    border: 1px solid var(--border);
+    border-radius: 4px;
+    font-size: 0.9em;
+    font-family: inherit;
+    font-weight: normal;
+    line-height: normal;
+}
+.btn {
+    margin: 0;
+    padding: 4px 22px;
+    display: inline-block;
+    min-width: 7em;
+    background-color: #eaeaea;
+    color: #333333;
+    background-image: linear-gradient(to bottom, #f8f8f8, #e1e1e1);
+    border: 1px solid var(--border);
+    border-color: #c1c1c1 #c1c1c1 #aaaaaa;
+    border-radius: 4px;
+    outline-offset: -2px;
+    font-size: 0.9em;
+    font-family: inherit;
+    font-weight: normal;
+    line-height: 1;
+    text-align: center;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+.btn:hover,
+.btn:focus,
+.btn:active {
+    color: #333333;
+    background-image: none;
+    text-decoration: none;
+}
+.btn:active {
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
 }
