--- a/newtheme.css
+++ b/newtheme.css
@@ -12,6 +12,7 @@
     --link: #07d;
     --link-active: #07d;
     --blockquote-accent: #ddd;
+    --separator: #ddd;
     --border: #bbb;
     --font: "Fira Sans", Helvetica, sans-serif;
     --monospace-font: Consolas, Menlo, Courier, monospace;
@@ -59,6 +60,9 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--heading);
     font-weight: 700;
 }
+h1 {
+    font-size: 2.6em;
+}
 a {
     color: var(--link);
     text-decoration: none;
@@ -86,6 +90,26 @@ a:hover {
 }
 .content form {
     margin: 1em 0;
+}
+.content table {
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+.content th:not([align]) {
+    text-align: left;
+}
+.content th,
+.content td {
+    padding: 0.3em;
+    padding-left: 2em;
+}
+.content th:first-child,
+.content td:first-child {
+    padding: 0.3em;
+}
+.content td {
+    border-top: 1px solid var(--separator);
+    border-bottom: 1px solid var(--separator);
 }
 .content code,
 .content pre {
@@ -143,7 +167,7 @@ a:hover {
 }
 .header .sitename h1 {
     margin: 0;
-    font-size: 3em;
+    font-size: 1.5em;
     font-weight: 700;
 }
 .header .sitename h1 a {
