--- a/newtheme.css
+++ b/newtheme.css
@@ -4,9 +4,8 @@
 
 :root {
     --bg: #fff;
-    --notice1-bg: #fffbf0;
-    --notice2-bg: #fdf0f0;
-    --notice3-bg: #f0f8fe;
+    --important-bg: #f0f8fe;
+    --note-bg: #fffbf0;
     --heading: #111;
     --text: #333;
     --link: #07d;
@@ -123,25 +122,16 @@ a:hover {
     border: 1px solid var(--blockquote-accent);
     border-radius: 3px;
 }
-.content .notice1 {
+.content .important {
     margin: 1em 0;
     padding: 10px 1em;
-    background-color: var(--notice1-bg);
+    background-color: var(--important-bg);
     border-radius: 3px;
 }
-.content .notice2 {
+.content .note {
     margin: 1em 0;
     padding: 10px 1em;
-    background-color: var(--notice2-bg);
-    border-radius: 3px;
-}
-.content .notice3,
-.content .notice4,
-.content .notice5,
-.content .notice6 {
-    margin: 1em 0;
-    padding: 10px 1em;
-    background-color: var(--notice3-bg);
+    background-color: var(--note-bg);
     border-radius: 3px;
 }
 .content .left {
